--- a/test.html
+++ b/test.html
@@ -5,6 +5,10 @@
     <title>두루치기48(테스트서버)</title>
   </head>
 <h1>두루치기48</h1>
+<style>
+  h1{color:hotpink}
+  h2{color:hotpink}
+</style>
 <img src="두루치기.jpg" width="30%">
  <input type="button" value="두루치기모드on" onclick="
         var target =   document.querySelector('body');
